<resources>
    <string name="app_name">FYPSmartFoodBank</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login">Login</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="doesn_t_have_an_account">Doesn\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password_image">forgot password image</string>
    <string name="forgotPasswordDescription">Please enter your e-mail address. We\'ll send you an email to reset your password</string>
    <string name="err_msg_usr_role">Please select user role</string>
    <string name="err_msg_name">Please enter your name</string>
    <string name="err_msg_userName">Please enter your username</string>
    <string name="err_msg_email">Please enter your email</string>
    <string name="err_msg_password">Please enter your password</string>
    <string name="err_msg_confirm_password">Please confirm your password</string>
    <string name="err_msg_phone">Please enter your phone number</string>
    <string name="err_msg_monthlyIncome">Please select your monthly income</string>
    <string name="details_success">Your details are valid.</string>
    <string name="err_password_not_match">Password not match!</string>


    <string-array name="user_role">
        <item>Beneficiary</item>
        <item>Donator</item>
    </string-array>

    <string-array name="monthly_income">
        <item>RM0 - RM500</item>
        <item>RM500 - RM1000</item>
        <item>RM1000 - RM2000</item>
        <item>RM2000 - RM4000</item>
        <item>Above RM4000</item>
    </string-array>

    <string-array name="request_type">
        <item>Claim Request</item>
        <item>Donation Request</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. YOu can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection failed!</string>
    <string name="title_activity_beneficiary_main">BeneficiaryMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit the app</string>
    <string name="err_msg_state">Please enter your state</string>
    <string name="err_msg_city">Please enter your city</string>
    <string name="title_activity_donator">DonatorActivity</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
</resources>