<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.Login">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/iv_circle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:scaleType="fitEnd"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/iv_login"
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_circle" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login">

        <TextView
            style="@style/defaultTextView"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/welcome_back"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/large_text_size" />

        <TextView
            style="@style/titleTextView"
            android:layout_marginTop="18dp"
            android:text="@string/login" />

        <TextView
            style="@style/secondaryTextView"
            android:layout_margin="0dp"
            android:text="@string/please_login_to_continue" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#757575" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_forgotPassword"
            style="@style/defaultLink"
            android:layout_width="match_parent"
            android:gravity="end"
            android:text="@string/forgot_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            android:textColor="@color/primaryText"
            app:backgroundTint="@color/secondaryColor"
            app:cornerRadius="@dimen/btn_cornerradius"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/secondaryTextView"
                android:layout_margin="0dp"
                android:layout_marginEnd="@dimen/normal_margin_padding"
                android:text="@string/doesn_t_have_an_account" />

            <TextView
                android:id="@+id/tv_signUp"
                style="@style/defaultLink"
                android:layout_marginStart="@dimen/small_margin_padding"
                android:text="@string/sign_up"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>