<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ForgotPassword">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/forgot_password_image"
        android:scaleType="fitEnd"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/verylarge_margin_padding"
        android:layout_marginTop="@dimen/verylarge_margin_padding"
        android:contentDescription="back button"
        android:elevation="5dp"
        android:src="@drawable/ic_arrow_back"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/verylarge_margin_padding"
        android:layout_marginEnd="@dimen/verylarge_margin_padding"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/fab_back">

        <TextView
            style="@style/titleTextView"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="Forgot Password" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/forgot_password"
            android:src="@drawable/forgot_password" />

        <TextView
            style="@style/defaultTextView"
            android:gravity="center"
            android:text="@string/forgotPasswordDescription" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="send email"
            android:textColor="@color/black"
            app:backgroundTint="@color/secondaryColor"
            app:cornerRadius="@dimen/btn_cornerradius" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>